<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.AddHappyPlaceActivity">

<!--"?attr/actionBarSize" below is the default ActionBar height-->
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbarAddPlace"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimary"
        android:theme="@style/CustomToolbarStyle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <!-- fillViewport below defines whether the scrollview should stretch its content to fill the viewport. -->
    <!--0dp height allows it to take all the available height-->
    <!-- ScrollView scrolls the small screen UI items that don't fit there -->
    <ScrollView
        android:id="@+id/svMain"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:fillViewport="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbarAddPlace">

        <!--Use constraint layout inside the ScrollView to place the items-->
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/mainContentPadding">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/etTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/editTextHintTitle"
                    android:inputType="textCapWords"
                    android:textColor="@color/primaryTextColor"
                    android:textColorHint="@color/secondaryTextColor"
                    android:textSize="@dimen/editTextTextSize"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_marginTop="@dimen/addScreenTilMarginTop"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tilTitle">

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/etDescription"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/editTextHintDescription"
                    android:inputType="textCapSentences"
                    android:textColor="@color/primaryTextColor"
                    android:textColorHint="@color/secondaryTextColor"
                    android:textSize="@dimen/editTextTextSize"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_marginTop="@dimen/addScreenTilMarginTop"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tilDescription">

                <!--"focusable*" below is to disable modifying of the Date box text,
                making it selectable instead of editable,
                the date-picker code for this is implemented in AddHappyPlaceActivity file -->
                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/etDate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/editTextHintDate"
                    android:inputType="text"
                    android:focusable="false"
                    android:focusableInTouchMode="false"
                    android:textColor="@color/primaryTextColor"
                    android:textColorHint="@color/secondaryTextColor"
                    android:textSize="@dimen/editTextTextSize"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilLocation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_marginTop="@dimen/addScreenTilMarginTop"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tilDate">

                <!-- Step46 Add "focusable*" below to disable modifying of the Location box text,
                making it selectable instead of editable,
                the Google Places API code for this is implemented in AddHappyPlaceActivity file -->
                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/etLocation"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/editTextHintLocation"
                    android:inputType="text"
                    android:focusable="false"
                    android:focusableInTouchMode="false"
                    android:textColor="@color/primaryTextColor"
                    android:textColorHint="@color/secondaryTextColor"
                    android:textSize="@dimen/editTextTextSize"/>
            </com.google.android.material.textfield.TextInputLayout>

            <!--Step59 Add a button to Select Current Location -->
           <TextView
               android:id="@+id/tvSelectCurrentLocation"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:layout_marginTop="@dimen/add_place_select_current_location_marginTop"
               android:background="@drawable/shape_image_view_border"
               android:foreground="?attr/selectableItemBackground"
               android:gravity="center"
               android:padding="@dimen/add_place_select_current_location_padding"
               android:text="@string/add_place_select_current_location_text"
               android:textColor="@color/colorAccent"
               android:textSize="@dimen/add_place_select_current_location_textsize"
               app:layout_constraintTop_toBottomOf="@+id/tilLocation"
               app:layout_constraintStart_toStartOf="parent"
               app:layout_constraintEnd_toEndOf="parent"
                />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/ivPlaceImage"
                android:layout_width="@dimen/addScreenPlaceImageSize"
                android:layout_height="@dimen/addScreenPlaceImageSize"
                android:layout_marginTop="@dimen/addScreenPlaceImageMarginTop"
                android:background="@drawable/shape_image_view_border"
                android:padding="@dimen/addScreenPlaceImagePadding"
                android:scaleType="centerCrop"
                android:src="@drawable/add_screen_image_placeholder"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvSelectCurrentLocation"
                app:layout_constraintHorizontal_bias="0.0"/>

            <TextView
                android:id="@+id/tvAddImage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/addScreenTextAddImageMarginTop"
                android:background="?attr/selectableItemBackground"
                android:gravity="center"
                android:padding="@dimen/addScreenTextAddImagePadding"
                android:text="@string/textAddImage"
                android:textColor="@color/colorAccent"
                android:textSize="@dimen/addScreenTextAddImageTextSize"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@+id/btnSave"
                app:layout_constraintStart_toEndOf="@id/ivPlaceImage"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvSelectCurrentLocation"
                app:layout_constraintHorizontal_bias="0.45"
                app:layout_constraintVertical_bias="0.019"/>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnSave"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/addScreenBtnSaveMarginTop"
                android:background="@drawable/shape_button_rounded"
                android:gravity="center"
                android:paddingTop="@dimen/addScreenBtnSavePaddingTopBottom"
                android:paddingBottom="@dimen/addScreenBtnSavePaddingTopBottom"
                android:text="@string/btnTextSave"
                android:textSize="@dimen/btnTextSize"
                android:textColor="@color/whiteColor"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/ivPlaceImage"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>